@@ -129,7 +129,7 @@ public class EditingOptionPane extends AbstractOptionPane
 		addComponent(elasticTabstops = new JCheckBox(jEdit.getProperty(
 		"options.editing.elasticTabstops")));
 		elasticTabstops.setToolTipText(jEdit.getProperty("options.editing.elasticTabstops.tooltip"));
-		
+
 		addComponent(deepIndent = new JCheckBox(jEdit.getProperty(
 			"options.editing.deepIndent")));
 
@@ -161,6 +161,37 @@ public class EditingOptionPane extends AbstractOptionPane
 		addComponent(resetUndoOnSave);
 		//}}}
 
+		//{{{ Large file mode
+		addSeparator(jEdit.getProperty("options.editing.largefilemode.title"));
+
+		addComponent(new JLabel(jEdit.getProperty("options.editing.largefilemode")));
+		addComponent(askLargeFileMode = new JRadioButton(jEdit.getProperty("options.editing.largefilemode.option.ask")));
+		addComponent(fullSyntaxLargeFileMode = new JRadioButton(jEdit.getProperty("options.editing.largefilemode.option.full")));
+		addComponent(limitedSyntaxLargeFileMode = new JRadioButton(jEdit.getProperty("options.editing.largefilemode.option.limited")));
+		addComponent(noHighlightLargeFileMode = new JRadioButton(jEdit.getProperty("options.editing.largefilemode.option.nohighlight")));
+		String option = jEdit.getProperty("largefilemode", "ask");
+		if ("full".equals(option))
+		{
+			fullSyntaxLargeFileMode.setSelected(true);
+		}
+		else if ("limited".equals(option))
+		{
+			limitedSyntaxLargeFileMode.setSelected(true);
+		}
+		else if ("nohighlight".equals(option))
+		{
+			noHighlightLargeFileMode.setSelected(true);
+		}
+		else
+		{
+			askLargeFileMode.setSelected(true);
+		}
+		ButtonGroup largeFileModeButtonGroup = new ButtonGroup();
+		largeFileModeButtonGroup.add(askLargeFileMode);
+		largeFileModeButtonGroup.add(fullSyntaxLargeFileMode);
+		largeFileModeButtonGroup.add(limitedSyntaxLargeFileMode);
+		largeFileModeButtonGroup.add(noHighlightLargeFileMode);
+		//}}}
 	} //}}}
 
 	//{{{ _save() method
@@ -179,6 +210,23 @@ public class EditingOptionPane extends AbstractOptionPane
 		for(int i = 0; i < modeProps.length; i++)
 		{
 			modeProps[i].save();
+		}
+
+		if (fullSyntaxLargeFileMode.isSelected())
+		{
+			jEdit.setProperty("largefilemode", "full");
+		}
+		else if (limitedSyntaxLargeFileMode.isSelected())
+		{
+			jEdit.setProperty("largefilemode", "limited");
+		}
+		else if (noHighlightLargeFileMode.isSelected())
+		{
+			jEdit.setProperty("largefilemode", "nohighlight");
+		}
+		else
+		{
+			jEdit.setProperty("largefilemode", "ask");
 		}
 	} //}}}
 
@@ -208,6 +256,11 @@ public class EditingOptionPane extends AbstractOptionPane
 	private JCheckBox elasticTabstops;
 	private JComboBox autoIndent;
 	private JCheckBox deepIndent;
+	private JRadioButton largeFileMode;
+	private JRadioButton askLargeFileMode;
+	private JRadioButton noHighlightLargeFileMode;
+	private JRadioButton limitedSyntaxLargeFileMode;
+	private JRadioButton fullSyntaxLargeFileMode;
 	//}}}
 
 	//{{{ saveMode() method
